# visibrain

./: README.md
back/: Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
front/: README.md  index.html  package-lock.json  package.json
front/src/: App.vue
front/src/components/: Videos.vue  fetch.ts
