[project]
name = "visibrain"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiphaine LAURENT",email = "tiphaine.laurent@epitech.eu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "twitchapi (>=4.4.0,<5.0.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "pydantic-mongo (>=2.4.0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pyright = "^1.1.398"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
